@@ -23,65 +23,46 @@ public class DataSource {
     public static List<OrderProduct> allOrderProducts;
     // Update this path according to your data files location
     public static String basePath = "C:\\Users\\itamar\\Desktop\\DataFiles\\";
-    public static String customersPath = basePath +"customers.txt";
-    public static String ordersPath = basePath +"orders.txt";
-    public static String productsPath = basePath +"products.txt";
-    public static String orderProductPath = basePath +"orderProduct.txt";
+    public static String customersPath = basePath + "customers.txt";
+    public static String ordersPath = basePath + "orders.txt";
+    public static String productsPath = basePath + "products.txt";
+    public static String orderProductPath = basePath + "orderProduct.txt";
 
-    static
-    {
+    static {
         try {
             allCustomers = readCustomersfromFile();
-            allOrders = readOrdersfromFile();
-            allProducts = readProductsfromFile();
+            allOrders = readOrdersfromFile();  //problem
+            allProducts = readProductsfromFile(); //problem
             allOrderProducts = readOrderProductsfromFile();
-        } catch (IOException e) { e.printStackTrace(); }
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
     }
-    public static List<Customer> readCustomersfromFile() throws IOException {
-        try (Stream<String> stream = Files.lines(Path.of(customersPath)))
-        {
-          stream.forEach(e -> allCustomers.add(new Customer(e.toString())));
-        }catch (IOException E){E.printStackTrace();}
 
-        return allCustomers;
+    public static List<Customer> readCustomersfromFile() throws IOException {
+
+        return Files.lines(Paths.get(customersPath)).map(Customer::new).collect(Collectors.toList());
     }
 
     public static List<Order> readOrdersfromFile() throws IOException {
-        try (Stream<String> stream = Files.lines(Path.of(ordersPath)))
-        {
-
-
-            stream.forEach(e -> {
-                try {
-                    allOrders.add(new Order(e.toString()));
-                } catch (ParseException ex) {
-                    ex.printStackTrace();
-                }
-            });
-
-        }catch (IOException E){E.printStackTrace();}
-
-
-        return allOrders;
+            return Files.lines(Paths.get(ordersPath)).
+                    map(OrderInfo-> {
+                          try {
+                              return new Order(OrderInfo);
+                          }catch (ParseException e)
+                          {
+                              e.printStackTrace();
+                          }
+                          return null;
+        }).collect(Collectors.toList());
     }
 
     public static List<Product> readProductsfromFile() throws IOException {
-        //To Do
-        try (Stream<String> stream = Files.lines(Path.of(productsPath)))
-        {
-            stream.forEach(e -> allProducts.add(new Product(e.toString())));
-        }catch (IOException E){E.printStackTrace();}
-
-        return allProducts;
+        return Files.lines(Paths.get(productsPath)).map(Product::new).collect(Collectors.toList());
     }
 
     public static List<OrderProduct> readOrderProductsfromFile() throws IOException {
-        try (Stream<String> stream = Files.lines(Path.of(orderProductPath)))
-        {
-            stream.forEach(e -> allOrderProducts.add(new OrderProduct(e.toString())));
-        }catch (IOException E){E.printStackTrace();}
-
-        return allOrderProducts;
+        return Files.lines(Paths.get(orderProductPath)).map(OrderProduct::new).collect(Collectors.toList());
     }
 }
 
